// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <h2
    className="sidebar-title sc-bwzfXH ierRJd"
  >
    <div />
  </h2>
</span>
`;

exports[`When using snapshots Should render with className and other props 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <h2
    className="my-class sidebar-title sc-bwzfXH ierRJd"
  >
    <div />
  </h2>
</span>
`;

exports[`When using snapshots Should render with other props 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <h2
    className="sidebar-title sc-bwzfXH ierRJd"
  >
    <div />
  </h2>
</span>
`;

exports[`When using snapshots Should render with the className prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <h2
    className="my-class sidebar-title sc-bwzfXH ierRJd"
  >
    <div />
  </h2>
</span>
`;
